fixed width issue with project popup on mobile

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -244,9 +244,6 @@ button {
   -webkit-animation: anvil 0.5s cubic-bezier(0.38, 0.1, 0.36, 0.9) forwards;
 }
 
-.popup-overlay {
-}
-
 .project-modal {
   font-size: 12px;
   color: white;
@@ -379,6 +376,10 @@ button {
         width: 100% !important;
       }
     }
+  }
+
+  .popup-content {
+    width: 90% !important;
   }
 
   .contact-me {
